--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,9 @@ jobs:
 
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    strategy:
+      matrix:
+        ENGINE_VERSION: [5.3.0, 5.4.0, 5.5.0, latest]
 
     steps:
     - uses: actions/checkout@v2
@@ -14,4 +17,4 @@ jobs:
         fetch-depth: 0
         submodules: recursive
     - name: test
-      run: docker-compose -f docker-compose.test.yml up --exit-code-from sut
+      run: docker-compose up --exit-code-from sut
