--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,4 +1,5 @@
-FROM registry.gitlab.com/minetest/minetest/server:5.4.0
+ARG ENGINE_VERSION=5.5.0
+FROM registry.gitlab.com/minetest/minetest/server:${ENGINE_VERSION}
 
 COPY ./entrypoint.sh /entrypoint.sh
 COPY ./stages/ /stages/
